Fix indicators alignment

--- a/Poncho.less
+++ b/Poncho.less
@@ -288,11 +288,9 @@ dt {
  */
 .mw-indicators {
 	float: right;
-	margin-bottom: 1em;
+	margin: 1em;
 	.mw-indicator {
 		display: inline-block;
-		margin-right: .5em;
-		padding: 6px;
 	}
 }
 
